# forge

./: .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  forge.json  go.work  go.work.sum  package-lock.json  package.json  tsconfig.base.json
api/: BUILD.bazel  Dockerfile  README.md  go.mod  go.sum
api/cmd/migrator/: BUILD.bazel  doc.go
api/cmd/server/: BUILD.bazel  main.go
api/internal/: BUILD.bazel  doc.go  module.go
api/internal/global/: manager.go  module.go  project_dto.go  transport_rest.go
api/pkg/api/: BUILD.bazel  doc.go
api/pkg/model/: BUILD.bazel  doc.go
api/pkg/proto/: BUILD.bazel  doc.go
api/test/: README.md
go/kit/application/ctrl/: BUILD.bazel  creator.go  creator_test.go  deleter.go  deleter_test.go  doc.go  getter.go  getter_test.go  lister.go  lister_test.go  patcher.go  updater.go
go/kit/application/repository/: BUILD.bazel  model.go  repository.go
go/kit/application/usecase/: BUILD.bazel  creator.go  creator_test.go  deleter.go  deleter_test.go  getter.go  getter_test.go  lister.go  lister_test.go  patcher.go  updater.go
go/kit/auth/: BUILD.bazel  authenticator.go  authenticator_test.go  credentials.go  grpc.go  http.go  module.go  token.go
go/kit/auth/authtest/: BUILD.bazel  authenticator.go  context_injector_mock.go  jwt.go  provider.go  strict_authenticator.go  token.go
go/kit/auth/jwt/: BUILD.bazel  jwt.go
go/kit/auth/provider/: BUILD.bazel  provider.go
go/kit/distributed/idgen/: BUILD.bazel  idgen.go  idgen_test.go
go/kit/errors/: BUILD.bazel  error_test.go  errors_TOBEDELETED.go  errors_TOBEDELETED_test.go  json.go
go/kit/errors/errorstest/: BUILD.bazel  detail_mock.go  error_mock.go
go/kit/fields/: BUILD.bazel  errors.go  errors_test.go  fields.go  fields_test.go  model.go  optional.go  optional_test.go  parser.go  resource.go  time.go  validators.go  validators_test.go
go/kit/filter/: BUILD.bazel  filter.go  filter_test.go  validator.go  validator_test.go  validators.go
go/kit/filter/filtertest/: BUILD.bazel  doc.go  field_filter_mock.go  helpers.go
go/kit/filter/pb/: BUILD.bazel  operator.pb.go
go/kit/filter/proto/: BUILD.bazel  operator.proto
go/kit/firebase/: BUILD.bazel  client.go  client_test.go  module.go
go/kit/firebase/firebasetest/: BUILD.bazel  auth_api_mock.go  client_mock.go  user_management_mock.go
go/kit/firebase/testdata/: integ.yaml
go/kit/fixtures/: BUILD.bazel  config.go  fixture_handler.go  fixture_runner.go  fixtures.go  fixtures_test.go  script_executor.go
go/kit/jsonapi/: BUILD.bazel  errors_test.go  filter.go  hooks_test.go  models_test.go  request.go  request_test.go  response.go  response_test.go
go/kit/jsonapi/helpers/: BUILD.bazel  asserts.go  goldenfile.go
go/kit/jsonapi/jsonapitest/: BUILD.bazel  linkable_mock.go  metable_mock.go  relationship_linkable_mock.go  relationship_metable_mock.go
go/kit/jsonapi/testdata/: unmarshal_error.json  unmarshal_many_articles.json  unmarshal_single_article.json
go/kit/kslices/: BUILD.bazel  slices.go  slices_test.go
go/kit/migrator/: BUILD.bazel  config.go  migration_handler.go  migration_runner.go  migrator.go  migrator_test.go  script_executor.go
go/kit/monitoring/: BUILD.bazel  module.go  monitor.go  monitor_test.go
go/kit/monitoring/logger/: BUILD.bazel  context_test.go  logger.go  logger_test.go  module.go
go/kit/monitoring/monitoringtest/: BUILD.bazel  monitor_mock.go  monitor_stub.go
go/kit/monitoring/tracer/: BUILD.bazel  event.go  example_test.go  parent.go  propagator.go  span.go  span_kind.go  tracer.go
go/kit/persistence/: BUILD.bazel  doc.go  tracing.go  tracing_test.go  transactioner.go
go/kit/persistence/gormcli/: BUILD.bazel  client.go  client_test.go  deleter.go  deleter_test.go  doc.go  monitor.go  tracer_plugin.go  transactioner.go  transactioner_test.go
go/kit/persistence/gormdb/: BUILD.bazel  client.go  client_test.go  doc.go  monitor.go  transactioner.go
go/kit/persistence/persistencetest/: BUILD.bazel  doc.go  tracing.go  transactioner.go  transactioner_mock.go  transactioner_stub.go
go/kit/persistence/pg/: BUILD.bazel  deleter.go  deleter_test.go  destroyer.go  destroyer_test.go  errors.go  errors_test.go  model.go  model_test.go  repo.go  repo_test.go  tracing.go  tracing_test.go  utils.go  utils_test.go
go/kit/persistence/postgres/: BUILD.bazel  error.go  lock.go  model.go  repo.go  repo_test.go
go/kit/persistence/rediscli/: BUILD.bazel  client.go  client_test.go  doc.go  errors.go  logger.go  module.go  options_test.go  repo.go  repo_test.go  tracing.go  tracing_test.go
go/kit/persistence/redisdb/: BUILD.bazel  client.go  client_test.go  logger.go  module.go  options_test.go  repo_test.go
go/kit/persistence/sqldb/: BUILD.bazel  conn.go  conn_test.go  doc.go  drivers_test.go  dsn.go  dsn_test.go  errors.go  module.go  pool.go  pool_test.go  registry_test.go  tracing.go  tracing_test.go  transactioner.go  transactioner_test.go
go/kit/ptr/: BUILD.bazel  of.go  of_test.go  to.go  to_test.go
go/kit/resource/: BUILD.bazel  doc.go  grpc.go  grpc_test.go  relationship.go  resource.go  resource_test.go  response.go  response_test.go  rest.go  rest_TOBEDELETED.go  rest_test.go  utils.go  utils_test.go  validators.go  validators_test.go
go/kit/resource/pb/: BUILD.bazel  pagination.pb.go  resource.pb.go  sorting.pb.go
go/kit/resource/proto/: BUILD.bazel  pagination.proto  resource.proto  sorting.proto
go/kit/resource/resourcepb/: BUILD.bazel  resource.pb.go
go/kit/resource/resourcetest/: BUILD.bazel  helpers.go  matchers.go  resource.go  resource_stub.go
go/kit/retry/: BUILD.bazel  retry.go  retry_test.go
go/kit/saga/: BUILD.bazel  saga.go  saga_test.go  step_test.go
go/kit/search/: BUILD.bazel  search.go
go/kit/search/query/: BUILD.bazel  (+5 more)
go/kit/sops/: BUILD.bazel  helper.go
go/kit/validation/: BUILD.bazel  validation.go
go/kit/workflow/: BUILD.bazel  scheduled_step.go  scheduled_step_test.go  scheduler.go  step.go  stream_connection_manager.go  streaming_step.go  streaming_test.go  test_utils.go  workflow.go  workflow_test.go
(+887 files in other folders)
