"""forge - Bazel Module Configuration"""

module(
    name = "forge",
    version = "1.0.0",
)

# Core Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# OCI (container) support
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

# Go support (official Bazel rules)
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")
