"""forge - Bazel Module Configuration"""

module(
    name = "forge",
    version = "0.0.0",
)

# Core Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# OCI (container) support
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# Go support (official Bazel rules)
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go/kit:go.mod")
use_repo(
    go_deps,
    "com_github_cenkalti_backoff_v5",
    "com_github_data_dog_go_sqlmock",
    "com_github_getsops_sops_v3",
    "com_github_golang_jwt_jwt_v5",
    "com_github_golang_migrate_migrate_v4",
    "com_github_golang_mock",
    "com_github_google_go_cmp",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_jackc_pgx_v5",
    "com_github_kelseyhightower_envconfig",
    "com_github_lib_pq",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_orlangure_gnomock",
    "com_github_rabbitmq_amqp091_go",
    "com_github_redis_go_redis_v9",
    "com_github_stretchr_testify",
    "com_github_swaggest_jsonschema_go",
    "com_github_swaggest_openapi_go",
    "com_google_firebase_go_v4",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "org_golang_google_api",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_sync",
    "org_uber_go_fx",
    "org_uber_go_zap",
)
