"""forge - Bazel Module Configuration"""

module(
    name = "forge",
    version = "0.1.0",
)

# Core Bazel dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# OCI (container) support
bazel_dep(name = "rules_oci", version = "2.0.0")

# Go support (official Bazel rules)
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.40.0")



# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/static-debian12",
    digest = "sha256:4b2a093ef4649bccd586625090a3c668b254cfe180dee54f4c94f3e9bd7e381e",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
        "linux/arm/v7",
        "linux/s390x",
        "linux/ppc64le",
    ],
)

use_repo(
    oci,
    "distroless_base",
    "distroless_base_linux_amd64",
    "distroless_base_linux_arm64_v8",
    "distroless_base_linux_arm_v7",
    "distroless_base_linux_s390x",
    "distroless_base_linux_ppc64le",
)


# Go toolchain setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")




