"""api service BUILD configuration"""

load("@gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# Gazelle configuration
# gazelle:prefix github.com/dosanma1/forge/backend/services/api
gazelle(name = "gazelle")

# Export go.mod for dependency management
exports_files([
    "go.mod",
    "go.sum",
])
