load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "authenticator.go",
        "context.go",
        "grpc.go",
        "http.go",
        "module.go",
        "token.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/errors:go_default_library",
        "//go/kit/firebase:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
