load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "authenticator.go",
        "context.go",
        "credentials.go",
        "doc.go",
        "grpc.go",
        "http.go",
        "module.go",
        "token.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/auth/jwt:go_default_library",
        "//go/kit/errors:go_default_library",
        "//go/kit/firebase:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["authenticator_test.go"],
    deps = [
        ":go_default_library",
        "//go/kit/firebase/firebasetest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
    ],
)
