load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "filter.go",
        "validators.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/filter",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/errors:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
