load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "doc.go",
        "module.go",
        "user.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/firebase",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_firebase_go_v4//:go_default_library",
        "@com_google_firebase_go_v4//auth:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
