load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "fixtures.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/fixtures",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/persistence/sqldb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fixtures_test.go"],
    data = glob(["testdata/**"]),
    embedsrcs = [
        "testdata/0001_test_data.sql",
        "testdata/0002_more_data.sql",
    ],
    deps = [
        ":go_default_library",
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/persistence/sqldb:go_default_library",
        "//go/kit/persistence/sqldb/sqldbtest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
