load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "doc.go",
        "errors.go",
        "filter.go",
        "hooks.go",
        "node.go",
        "nullable.go",
        "request.go",
        "response.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/jsonapi",
    visibility = ["//visibility:public"],
    deps = ["//go/kit/generics:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "errors_test.go",
        "hooks_test.go",
        "models_test.go",
        "request_test.go",
        "response_test.go",
    ],
    data = glob(["testdata/**"]),
    deps = [
        ":go_default_library",
        "//go/kit/jsonapi/helpers:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
