load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["slices.go"],
    importpath = "github.com/dosanma1/forge/go/kit/kslices",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["slices_test.go"],
)
