load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "migration_handler.go",
        "migration_runner.go",
        "migrator.go",
        "script_executor.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/migrator",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/fields:go_default_library",
        "//go/kit/monitoring:go_default_library",
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/monitoring/tracer:go_default_library",
        "//go/kit/monitoring/tracer/module:go_default_library",
        "//go/kit/persistence/gormcli:go_default_library",
        "//go/kit/persistence/gormcli/gormpg:go_default_library",
        "//go/kit/persistence/sqldb:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate_v4//source/iofs:go_default_library",
        "@com_github_kelseyhightower_envconfig//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
