load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "migrator.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/migrator",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/persistence/sqldb:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//database/postgres:go_default_library",
        "@com_github_golang_migrate_migrate_v4//source/iofs:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["migrator_test.go"],
    data = glob(["testdata/**"]),
    embedsrcs = [
        "testdata/migrations/000001_create_test_table.down.sql",
        "testdata/migrations/000001_create_test_table.up.sql",
        "testdata/migrations/000002_add_user_data.down.sql",
        "testdata/migrations/000002_add_user_data.up.sql",
        "testdata/migrations/common-post-migration/001_cleanup.sql",
        "testdata/migrations/common-pre-migration/001_setup.sql",
    ],
    deps = [
        ":go_default_library",
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/persistence/sqldb:go_default_library",
        "//go/kit/persistence/sqldb/sqldbtest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
