load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "module.go",
        "monitor.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/monitoring",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/fields:go_default_library",
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/monitoring/tracer:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["monitor_test.go"],
    deps = [
        ":go_default_library",
        "//go/kit/fields:go_default_library",
        "//go/kit/monitoring/logger:go_default_library",
        "//go/kit/monitoring/logger/loggertest:go_default_library",
        "//go/kit/monitoring/tracer:go_default_library",
        "//go/kit/monitoring/tracer/tracertest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
