load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "of.go",
        "to.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/ptr",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "of_test.go",
        "to_test.go",
    ],
    deps = [":go_default_library"],
)
