load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "grpc.go",
        "relationship.go",
        "resource.go",
        "response.go",
        "rest.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/resource",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/instance:go_default_library",
        "//go/kit/resource/proto:resourcepb_go_proto",
        "//go/kit/slicesx:go_default_library",
        "//go/kit/transport/grpc:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "grpc_test.go",
        "resource_test.go",
    ],
    deps = [
        ":go_default_library",
        "//go/kit/ptr:go_default_library",
        "//go/kit/resource/proto:resourcepb_go_proto",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
