load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["retry.go"],
    importpath = "github.com/dosanma1/forge/go/kit/retry",
    visibility = ["//visibility:public"],
    deps = ["@com_github_cenkalti_backoff_v5//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["retry_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
