load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["search.go"],
    importpath = "github.com/dosanma1/forge/go/kit/search",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/fields:go_default_library",
        "//go/kit/search/query:go_default_library",
    ],
)
