load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "helper.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/sops",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getsops_sops_v3//cmd/sops/formats:go_default_library",
        "@com_github_getsops_sops_v3//decrypt:go_default_library",
        "@com_github_stretchr_testify//assert/yaml:go_default_library",
    ],
)
