load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validation.go"],
    importpath = "github.com/dosanma1/forge/go/kit/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/errors:go_default_library",
        "//go/kit/resource:go_default_library",
    ],
)
