load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "scheduled_step.go",
        "scheduler.go",
        "step.go",
        "stream_connection_manager.go",
        "streaming_step.go",
        "test_utils.go",
        "workflow.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/workflow",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/monitoring:go_default_library",
        "//go/kit/transport/websocket:go_default_library",
        "@com_github_robfig_cron_v3//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "scheduled_step_test.go",
        "streaming_test.go",
        "workflow_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//go/kit/monitoring/monitoringtest:go_default_library"],
)
