load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "docs.go",
        "enums.go",
        "model.go",
        "repository.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/application/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/resource:go_default_library",
        "//go/kit/search:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
