load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "hmac.go",
        "jwt.go",
        "module.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/auth/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)
