load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["idgen.go"],
    importpath = "github.com/dosanma1/forge/go/kit/distributed/idgen",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["idgen_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
