load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "detail_mock.go",
        "error_mock.go",
    ],
    importpath = "github.com/dosanma1/forge/go/kit/errors/errorstest",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/errors:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
