load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["field_filter_mock.go"],
    importpath = "github.com/dosanma1/forge/go/kit/filter/filtertest",
    visibility = ["//visibility:public"],
    deps = [
        "//go/kit/filter:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
